infra/k8s/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kikos-web
  namespace: kikos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kikos-web
  template:
    metadata:
      labels:
        app: kikos-web
    spec:
      containers:
        - name: kikos-web
          image: ghcr.io/ilannildo/kikos-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
      imagePullSecrets:
              - name: regcred
